// Vitest Snapshot v1

exports[`Jumper > Jumper layoutVue demo works fine 1`] = `
<t-jumper
  layout="vertical"
/>
`;

exports[`Jumper > Jumper sizeVue demo works fine 1`] = `
<t-space
  direction="vertical"
  style="text-align: center;"
>
  <t-jumper
    size="small"
  />
  <t-jumper />
  <t-jumper
    size="large"
  />
</t-space>
`;

exports[`Jumper > Jumper tipsVue demo works fine 1`] = `
<t-jumper
  tips="[object Object]"
/>
`;
